Fixes minor bug with link wrapped images

--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -142,3 +142,7 @@
     columns: 2 auto;
   }
 }
+
+.event-org-logo-container a {
+  border-bottom: none;
+}
